--- a/package.json
+++ b/package.json
@@ -7,8 +7,20 @@
   "bin": {
     "hey": "bin/hey"
   },
+  "scripts": {
+    "lint": "standard '*(lib|test)/*.js' --verbose | snazzy",
+    "prepush": "yarn lint && yarn test",
+    "test": "mocha -R min"
+  },
   "dependencies": {
     "shelljs": "^0.7.8",
     "trash": "^4.1.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "husky": "^0.14.3",
+    "mocha": "^4.0.1",
+    "snazzy": "^7.0.0",
+    "standard": "^10.0.3"
   }
 }
