adding glob support for delete command

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "mocha -R min"
   },
   "dependencies": {
+    "glob": "^7.1.2",
     "shelljs": "^0.7.8",
     "trash": "^4.1.0"
   },
