--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "lint": "standard '*(lib|test)/**/*.js' --verbose | snazzy",
     "prepush": "yarn lint && yarn test",
-    "test": "mocha -R min"
+    "test": "mocha --recursive -R min"
   },
   "standard": {
     "env": "mocha"
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "del": "^3.0.0",
     "husky": "^0.14.3",
     "mocha": "^5.0.5",
     "snazzy": "^7.1.1",
