--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hey": "bin/hey"
   },
   "scripts": {
+    "coverage": "nyc yarn test",
     "lint": "standard '*(lib|test)/**/*.js' --verbose | snazzy",
     "prepush": "yarn lint && yarn test",
     "test": "mocha --recursive -R min"
@@ -39,6 +40,7 @@
     "del": "^3.0.0",
     "husky": "^0.14.3",
     "mocha": "^5.0.5",
+    "nyc": "^11.7.1",
     "snazzy": "^7.1.1",
     "standard": "^11.0.1"
   }
