--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "hey": "bin/hey"
   },
   "scripts": {
-    "coverage": "nyc npm test",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "lint": "standard '*(lib|test)/**/*.js' --verbose | snazzy",
     "prepush": "npm run lint",
-    "test": "mocha --recursive -R min"
+    "test": "nyc mocha --recursive -R min"
   },
   "standard": {
     "env": "mocha"
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
     "del": "^3.0.0",
     "husky": "^0.14.3",
     "mocha": "^5.0.5",
