switching from chalk to kleur

--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "env": "mocha"
   },
   "dependencies": {
-    "chalk": "^2.3.2",
     "globby": "^8.0.1",
+    "kleur": "^2.0.2",
     "pfs": "^2.1.2",
     "shelljs": "^0.8.1",
     "trash": "^4.3.0"
