--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "env": "mocha"
   },
   "dependencies": {
+    "fs-extra": "^7.0.0",
     "globby": "^8.0.1",
     "kleur": "^2.0.2",
-    "pfs": "^2.1.2",
     "shelljs": "^0.8.1",
     "trash": "^4.3.0"
   },
