adding a few more package keywords

--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
     "command",
     "glob",
     "human",
+    "ls",
+    "mkdir",
+    "mkdirp",
     "readable",
+    "rm",
+    "rmrf",
+    "rimraf",
     "terminal",
     "create",
     "delete",
+    "destroy",
     "find",
     "list",
     "make",
+    "remove",
     "trash"
   ],
   "engines": {
