--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ os:
   - linux
   - osx
 node_js:
-  - 8
-  - 9
-script: npm run test+coverage
+  - lts/*
+  - node
+script: yarn test+coverage
 after_success:
-  - npm run coveralls
+  - yarn coveralls
