--- a/package.json
+++ b/package.json
@@ -41,8 +41,14 @@
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "lint": "standard '*(lib|test)/**/*.js' --verbose | snazzy",
     "prepush": "npm run lint",
-    "test": "mocha --recursive -R list -t 5s",
+    "test": "ava -v",
     "test+coverage": "nyc npm test"
+  },
+  "ava": {
+    "require": "esm"
+  },
+  "nyc": {
+    "require": "esm"
   },
   "standard": {
     "env": "mocha"
@@ -54,10 +60,10 @@
     "trash": "^4.3.0"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
+    "ava": "^0.25.0",
     "coveralls": "^3.0.0",
+    "esm": "^3.0.84",
     "husky": "^0.14.3",
-    "mocha": "^5.0.5",
     "nyc": "^11.7.1",
     "snazzy": "^7.1.1",
     "standard": "^11.0.1"
